MyParser.py
# Generated from MyParser.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class MyParser ( Parser ):

    grammarFileName = "MyParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'/*'", "'*/'" ]

    symbolicNames = [ "<INVALID>", "KEYWORD", "LINE_COMMENT", "BLOCK_COMMENT_START", 
                      "WS", "STRING_SINGLE", "STRING_DOUBLE", "HEX_STRING", 
                      "BIT_STRING", "BRACKET_IDENTIFIER", "VARIABLE", "IDENTIFIER", 
                      "NUMBER", "OPERATOR", "PUNCTUATION", "COMMENT_OPEN", 
                      "COMMENT_CLOSE", "COMMENT_TEXT" ]

    RULE_sqlScript = 0
    RULE_statementList = 1
    RULE_statement = 2
    RULE_goStatement = 3
    RULE_createTableStatement = 4
    RULE_tableName = 5
    RULE_columnDefinitionList = 6
    RULE_columnDefinition = 7
    RULE_columnName = 8
    RULE_dataType = 9
    RULE_columnConstraint = 10
    RULE_alterTableStatement = 11
    RULE_addColumnClause = 12
    RULE_dropConstraintClause = 13
    RULE_constraintName = 14
    RULE_updateStatement = 15
    RULE_assignmentList = 16
    RULE_assignment = 17
    RULE_whereClause = 18
    RULE_selectStatement = 19
    RULE_selectList = 20
    RULE_selectItem = 21
    RULE_fromClause = 22
    RULE_tableSource = 23
    RULE_ifStatement = 24
    RULE_blockStatement = 25
    RULE_tryCatchStatement = 26
    RULE_declareStatement = 27
    RULE_setStatement = 28
    RULE_execStatement = 29
    RULE_expression = 30
    RULE_expressionList = 31
    RULE_caseExpression = 32
    RULE_whenClause = 33
    RULE_elseClause = 34
    RULE_condition = 35
    RULE_columnReference = 36
    RULE_functionCall = 37
    RULE_literal = 38

    ruleNames =  [ "sqlScript", "statementList", "statement", "goStatement", 
                   "createTableStatement", "tableName", "columnDefinitionList", 
                   "columnDefinition", "columnName", "dataType", "columnConstraint", 
                   "alterTableStatement", "addColumnClause", "dropConstraintClause", 
                   "constraintName", "updateStatement", "assignmentList", 
                   "assignment", "whereClause", "selectStatement", "selectList", 
                   "selectItem", "fromClause", "tableSource", "ifStatement", 
                   "blockStatement", "tryCatchStatement", "declareStatement", 
                   "setStatement", "execStatement", "expression", "expressionList", 
                   "caseExpression", "whenClause", "elseClause", "condition", 
                   "columnReference", "functionCall", "literal" ]

    EOF = Token.EOF
    KEYWORD=1
    LINE_COMMENT=2
    BLOCK_COMMENT_START=3
    WS=4
    STRING_SINGLE=5
    STRING_DOUBLE=6
    HEX_STRING=7
    BIT_STRING=8
    BRACKET_IDENTIFIER=9
    VARIABLE=10
    IDENTIFIER=11
    NUMBER=12
    OPERATOR=13
    PUNCTUATION=14
    COMMENT_OPEN=15
    COMMENT_CLOSE=16
    COMMENT_TEXT=17

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class SqlScriptContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statementList(self):
            return self.getTypedRuleContext(MyParser.StatementListContext,0)


        def EOF(self):
            return self.getToken(MyParser.EOF, 0)

        def getRuleIndex(self):
            return MyParser.RULE_sqlScript

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSqlScript" ):
                listener.enterSqlScript(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSqlScript" ):
                listener.exitSqlScript(self)




    def sqlScript(self):

        localctx = MyParser.SqlScriptContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_sqlScript)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 78
            self.statementList()
            self.state = 79
            self.match(MyParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MyParser.StatementContext)
            else:
                return self.getTypedRuleContext(MyParser.StatementContext,i)


        def PUNCTUATION(self, i:int=None):
            if i is None:
                return self.getTokens(MyParser.PUNCTUATION)
            else:
                return self.getToken(MyParser.PUNCTUATION, i)

        def getRuleIndex(self):
            return MyParser.RULE_statementList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatementList" ):
                listener.enterStatementList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatementList" ):
                listener.exitStatementList(self)




    def statementList(self):

        localctx = MyParser.StatementListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statementList)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 87
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,1,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 81
                    self.statement()
                    self.state = 83
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
                    if la_ == 1:
                        self.state = 82
                        self.match(MyParser.PUNCTUATION)

             
                self.state = 89
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,1,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def createTableStatement(self):
            return self.getTypedRuleContext(MyParser.CreateTableStatementContext,0)


        def alterTableStatement(self):
            return self.getTypedRuleContext(MyParser.AlterTableStatementContext,0)


        def updateStatement(self):
            return self.getTypedRuleContext(MyParser.UpdateStatementContext,0)


        def selectStatement(self):
            return self.getTypedRuleContext(MyParser.SelectStatementContext,0)


        def declareStatement(self):
            return self.getTypedRuleContext(MyParser.DeclareStatementContext,0)


        def setStatement(self):
            return self.getTypedRuleContext(MyParser.SetStatementContext,0)


        def execStatement(self):
            return self.getTypedRuleContext(MyParser.ExecStatementContext,0)


        def ifStatement(self):
            return self.getTypedRuleContext(MyParser.IfStatementContext,0)


        def tryCatchStatement(self):
            return self.getTypedRuleContext(MyParser.TryCatchStatementContext,0)


        def goStatement(self):
            return self.getTypedRuleContext(MyParser.GoStatementContext,0)


        def blockStatement(self):
            return self.getTypedRuleContext(MyParser.BlockStatementContext,0)


        def PUNCTUATION(self):
            return self.getToken(MyParser.PUNCTUATION, 0)

        def getRuleIndex(self):
            return MyParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)




    def statement(self):

        localctx = MyParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_statement)
        try:
            self.state = 102
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 90
                self.createTableStatement()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 91
                self.alterTableStatement()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 92
                self.updateStatement()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 93
                self.selectStatement()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 94
                self.declareStatement()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 95
                self.setStatement()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 96
                self.execStatement()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 97
                self.ifStatement()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 98
                self.tryCatchStatement()
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 99
                self.goStatement()
                pass

            elif la_ == 11:
                self.enterOuterAlt(localctx, 11)
                self.state = 100
                self.blockStatement()
                pass

            elif la_ == 12:
                self.enterOuterAlt(localctx, 12)
                self.state = 101
                self.match(MyParser.PUNCTUATION)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class GoStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def KEYWORD(self):
            return self.getToken(MyParser.KEYWORD, 0)

        def getRuleIndex(self):
            return MyParser.RULE_goStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGoStatement" ):
                listener.enterGoStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGoStatement" ):
                listener.exitGoStatement(self)




    def goStatement(self):

        localctx = MyParser.GoStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_goStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 104
            self.match(MyParser.KEYWORD)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CreateTableStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def KEYWORD(self, i:int=None):
            if i is None:
                return self.getTokens(MyParser.KEYWORD)
            else:
                return self.getToken(MyParser.KEYWORD, i)

        def tableName(self):
            return self.getTypedRuleContext(MyParser.TableNameContext,0)


        def PUNCTUATION(self, i:int=None):
            if i is None:
                return self.getTokens(MyParser.PUNCTUATION)
            else:
                return self.getToken(MyParser.PUNCTUATION, i)

        def columnDefinitionList(self):
            return self.getTypedRuleContext(MyParser.ColumnDefinitionListContext,0)


        def getRuleIndex(self):
            return MyParser.RULE_createTableStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCreateTableStatement" ):
                listener.enterCreateTableStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCreateTableStatement" ):
                listener.exitCreateTableStatement(self)




    def createTableStatement(self):

        localctx = MyParser.CreateTableStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_createTableStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 106
            self.match(MyParser.KEYWORD)
            self.state = 107
            self.match(MyParser.KEYWORD)
            self.state = 108
            self.tableName()
            self.state = 109
            self.match(MyParser.PUNCTUATION)
            self.state = 110
            self.columnDefinitionList()
            self.state = 111
            self.match(MyParser.PUNCTUATION)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TableNameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self, i:int=None):
            if i is None:
                return self.getTokens(MyParser.IDENTIFIER)
            else:
                return self.getToken(MyParser.IDENTIFIER, i)

        def PUNCTUATION(self):
            return self.getToken(MyParser.PUNCTUATION, 0)

        def BRACKET_IDENTIFIER(self):
            return self.getToken(MyParser.BRACKET_IDENTIFIER, 0)

        def getRuleIndex(self):
            return MyParser.RULE_tableName

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTableName" ):
                listener.enterTableName(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTableName" ):
                listener.exitTableName(self)




    def tableName(self):

        localctx = MyParser.TableNameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_tableName)
        try:
            self.state = 120
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 115
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
                if la_ == 1:
                    self.state = 113
                    self.match(MyParser.IDENTIFIER)
                    self.state = 114
                    self.match(MyParser.PUNCTUATION)


                self.state = 117
                self.match(MyParser.IDENTIFIER)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 118
                self.match(MyParser.BRACKET_IDENTIFIER)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 119
                self.match(MyParser.IDENTIFIER)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ColumnDefinitionListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def columnDefinition(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MyParser.ColumnDefinitionContext)
            else:
                return self.getTypedRuleContext(MyParser.ColumnDefinitionContext,i)


        def PUNCTUATION(self, i:int=None):
            if i is None:
                return self.getTokens(MyParser.PUNCTUATION)
            else:
                return self.getToken(MyParser.PUNCTUATION, i)

        def getRuleIndex(self):
            return MyParser.RULE_columnDefinitionList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterColumnDefinitionList" ):
                listener.enterColumnDefinitionList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitColumnDefinitionList" ):
                listener.exitColumnDefinitionList(self)




    def columnDefinitionList(self):

        localctx = MyParser.ColumnDefinitionListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_columnDefinitionList)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 122
            self.columnDefinition()
            self.state = 127
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,5,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 123
                    self.match(MyParser.PUNCTUATION)
                    self.state = 124
                    self.columnDefinition() 
                self.state = 129
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,5,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ColumnDefinitionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def columnName(self):
            return self.getTypedRuleContext(MyParser.ColumnNameContext,0)


        def dataType(self):
            return self.getTypedRuleContext(MyParser.DataTypeContext,0)


        def columnConstraint(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(MyParser.ColumnConstraintContext)
            else:
                return self.getTypedRuleContext(MyParser.ColumnConstraintContext,i)


        def getRuleIndex(self):
            return MyParser.RULE_columnDefinition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterColumnDefinition" ):
                listener.enterColumnDefinition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitColumnDefinition" ):
                listener.exitColumnDefinition(self)




    def columnDefinition(self):

        localctx = MyParser.ColumnDefinitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_columnDefinition)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 130
            self.columnName()
            self.state = 131
            self.dataType()
            self.state = 135
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,6,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 132
                    self.columnConstraint() 
                self.state = 137
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,6,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ColumnNameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(MyParser.IDENTIFIER, 0)

        def BRACKET_IDENTIFIER(self):
            return self.getToken(MyParser.BRACKET_IDENTIFIER, 0)

        def getRuleIndex(self):
            return MyParser.RULE_columnName

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterColumnName" ):
                listener.enterColumnName(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitColumnName" ):
                listener.exitColumnName(self)




    def columnName(self):

        localctx = MyParser.ColumnNameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_columnName)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 138
            _la = self._input.LA(1)
            if not(_la==9 or _la==11):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DataTypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def KEYWORD(self):
            return self.getToken(MyParser.KEYWORD, 0)

        def PUNCTUATION(self, i:int=None):
            if i is None:
                return self.getTokens(MyParser.PUNCTUATION)
            else:
                return self.getToken(MyParser.PUNCTUATION, i)

        def NUMBER(self):
            return self.getToken(MyParser.NUMBER, 0)

        def IDENTIFIER(self):
            return self.getToken(MyParser.IDENTIFIER, 0)

        def getRuleIndex(self):
            return MyParser.RULE_dataType

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDataType" ):
                listener.enterDataType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDataType" ):
                listener.exitDataType(self)




    def dataType(self):

        localctx = MyParser.DataTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_dataType)
        try:
            self.state = 152
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1]:
                self.enterOuterAlt(localctx, 1)
                self.state = 140
                self.match(MyParser.KEYWORD)
                self.state = 144
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
                if la_ == 1:
                    self.state = 141
                    self.match(MyParser.PUNCTUATION)
                    self.state = 142
                    self.match(MyParser.NUMBER)
                    self.state = 143
                    self.match(MyParser.PUNCTUATION)


                pass
            elif token in [11]:
                self.enterOuterAlt(localctx, 2)
                self.state = 146
                self.match(MyParser.IDENTIFIER)
                self.state = 150
                self._errHandler.sync(self)
                la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
                if la_ == 1:
                    self.state = 147
                    self.match(MyParser.PUNCTUATION)
                    self.state = 148
                    self.match(MyParser.NUMBER)
                    self.state = 149
                    self.match(MyParser.PUNCTUATION)


                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ColumnConstraintContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def KEYWORD(self, i:int=None):
            if i is None:
                return self.getTokens(MyParser.KEYWORD)
            else:
                return self.getToken(MyParser.KEYWORD, i)

        def getRuleIndex(self):
            return MyParser.RULE_columnConstraint

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterColumnConstraint" ):
                listener.enterColumnConstraint(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitColumnConstraint" ):
                listener.exitColumnConstraint(self)




    def columnConstraint(self):

        localctx = MyParser.ColumnConstraintContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_columnConstraint)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 154
            self.match(MyParser.KEYWORD)
            self.state = 156
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.state = 155
                self.match(MyParser.KEYWORD)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AlterTableStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def KEYWORD(self, i:int=None):
            if i is None:
                return self.getTokens(MyParser.KEYWORD)
            else:
                return self.getToken(MyParser.KEYWORD, i)

        def tableName(self):
            return self.getTypedRuleContext(MyParser.TableNameContext,0)


        def addColumnClause(self):
            return self.getTypedRuleContext(MyParser.AddColumnClauseContext,0)


        def dropConstraintClause(self):
            return self.getTypedRuleContext(MyParser.DropConstraintClauseContext,0)


        def getRuleIndex(self):
            return MyParser.RULE_alterTableStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAlterTableStatement" ):
                listener.enterAlterTableStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAlterTableStatement" ):
                listener.exitAlterTableStatement(self)




    def alterTableStatement(self):

        localctx = MyParser.AlterTableStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_alterTableStatement)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 158
            self.match(MyParser.KEYWORD)
            self.state = 159
            self.match(MyParser.KEYWORD)
            self.state = 160
            self.tableName()
            self.state = 163
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,11,self._ctx)
            if la_ == 1:
                self.state = 161
                self.addColumnClause()
                pass

            elif la_ == 2:
                self.state = 162
                self.dropConstraintClause()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AddColumnClauseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def KEYWORD(self):
            return self.getToken(MyParser.KEYWORD, 0)

        def columnDefinition(self):
            return self.getTypedRuleContext(MyParser.ColumnDefinitionContext,0)


        def getRuleIndex(self):
            return MyParser.RULE_addColumnClause

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAddColumnClause" ):
                listener.enterAddColumnClause(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAddColumnClause" ):
                listener.exitAddColumnClause(self)




    def addColumnClause(self):

        localctx = MyParser.AddColumnClauseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_addColumnClause)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 165
            self.match(MyParser.KEYWORD)
            self.state = 166
            self.columnDefinition()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DropConstraintClauseContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def KEYWORD(self, i:int=None):
            if i is None:
                return self.getTokens(MyParser.KEYWORD)
            else:
                return self.getToken(MyParser.KEYWORD, i)

        def constraintName(self):
            return self.getTypedRuleContext(MyParser.ConstraintNameContext,0)


        def getRuleIndex(self):
            return MyParser.RULE_dropConstraintClause

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDropConstraintClause" ):
                listener.enterDropConstraintClause(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDropConstraintClause" ):
                listener.exitDropConstraintClause(self)




    def dropConstraintClause(self):

        localctx = MyParser.DropConstraintClauseContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_dropConstraintClause)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 168
            self.match(MyParser.KEYWORD)
            self.state = 169
            self.match(MyParser.KEYWORD)
            self.state = 170
            self.constraintName()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConstraintNameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IDENTIFIER(self):
            return self.getToken(MyParser.IDENTIFIER, 0)

        def BRACKET_IDENTIFIER(self):
            return self.getToken(MyParser.BRACKET_IDENTIFIER, 0)

        def getRuleIndex(self):
            return MyParser.RULE_constraintName
